src/test/ui/issues/issue-46112.stderr
error[E0308]: mismatched types
  --> $DIR/issue-46112.rs:9:21
   |
LL | fn main() { test(Ok(())); }
   |                     ^^
   |                     |
   |                     expected enum `Option`, found `()`
   |                     help: try using a variant of the expected enum: `Some(())`
   |
   = note:   expected enum `Option<()>`
           found unit type `()`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
